syntax="proto3";

package greet;

option go_package="greet/greetpb";

message Greeting {

    string TotalOrder=1;
    string OrderNumber=2;
}

message GreetRequest {
    Greeting greeting =1 ;
}

message GreetResponse {
    string result=1;
}

service GreetService {
    rpc Greet(GreetRequest) returns (GreetResponse){}
}